<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.main.admin.AdminProfileFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="@color/whiteX"
        app:cardCornerRadius="40dp"
        android:layout_marginVertical="40dp"

        app:cardElevation="0dp"
        app:contentPadding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp"

            >

            <ImageView
                android:id="@+id/pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@color/whiteY"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:maxLines="1"
            android:text="@string/nm"
            android:textColor="@color/dark"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu_regular"
            android:maxLines="1"
            android:text="@string/des"
            android:textColor="@color/dark"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/ic_work"
            app:drawableTint="@color/dark" />

        <TextView
            android:id="@+id/pn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu_regular"
            android:maxLines="1"
            android:text="@string/pn"
            android:textColor="@color/dark"
            android:textSize="22sp"
            app:drawableStartCompat="@drawable/ic_phone"
            app:drawableTint="@color/dark" />
    </LinearLayout>

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:fontFamily="@font/ubuntu_bold"-->
<!--        android:text="Contract Admin:"-->
<!--        android:textColor="@color/bg1"-->
<!--        android:textSize="14dp" />-->


</LinearLayout>