<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/whiteX"
        app:cardCornerRadius="30dp"


        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="100dp"
                    >
                    <ImageView
                        android:id="@+id/pic"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_profile"
                        android:background="@color/whiteY"
                        android:contentDescription="@string/logo"
                        />
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/nm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/nm"
                        android:maxLines="1"
                        android:fontFamily="@font/ubuntu_bold"
                        android:textColor="@color/dark"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/des"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/des"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/dark"
                        android:textSize="16sp"
                        android:drawablePadding="5dp"
                        android:layout_marginVertical="2dp"
                        app:drawableStartCompat="@drawable/ic_work"
                        app:drawableTint="@color/dark" />
                    <TextView
                        android:id="@+id/pn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/pn"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/dark"
                        android:textSize="16sp"
                        android:drawablePadding="5dp"
                        android:layout_marginBottom="7dp"
                        app:drawableStartCompat="@drawable/ic_phone"
                        app:drawableTint="@color/dark" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>